--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.6.3",
     "react-google-login": "^5.0.4",
+    "react-modal": "^3.9.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
