--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "react-select": "^3.0.4",
+    "react-sticky-footer": "0.1.0-rc3",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
