--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.3.16",
     "react-google-login": "^5.0.4",
     "react-select": "^3.0.4",
+    "react-sticky-footer": "0.1.0-rc3",
     "reactstrap": "^8.0.1"
   }
 }
