--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^2.1.1",
     "react-select": "^3.0.4",
     "react-sticky-footer": "0.1.0-rc3",
+    "react-to-pdf": "0.0.8",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
