--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,15 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "dist": "^0.1.2",
+    "html2canvas": "^1.0.0-rc.3",
+    "jspdf": "^1.5.3",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.6.3",
     "react-google-login": "^5.0.4",
     "react-modal": "^3.9.1",
+    "react-pdf": "^4.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "react-select": "^3.0.4",
